--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -62,6 +62,11 @@ small {
   max-height: 35px;
 }
 
+.logo a {
+  display: inline-block;
+  padding-left: 1rem;
+}
+
 img {
   vertical-align: bottom; /* removes bottom gap */
 }
@@ -90,30 +95,114 @@ input#filterInput:focus {
   color: #35363a;
 }
 
-ul#host-list {
-  text-align: left;
-  border-top: 1px dashed #4C4D51;
-  border-bottom: 1px dashed #4C4D51;
-  list-style: none;
-  columns: 3;
+table.valetlinks {
+  color: #ccc;
+  font-size: 14px;
+  text-align: center;
+  display: block;
+  margin: 60px auto;
   width: 100%;
-  max-width: 1200px;
-  margin: 1rem auto 2rem;
-  padding: 1rem;
-
-  display: none;
+  max-width: 750px;
 }
 
-ul#host-list li {
-  -webkit-column-break-inside: avoid;
-  page-break-inside: avoid;
-  break-inside: avoid;
-  padding: 6px 0 7px;
+table.valetlinks tbody {
+  display: block;
+  width: 100%;
+}
+
+table.valetlinks tr {
+  display: flex;
+  width: 100%;
+}
+
+table.valetlinks tr:nth-child(1) {
+  color: #999;
+  font-size: 13px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+table.valetlinks tr:hover {
+  border-radius: 3px;
+  background-color: #111;
+  /*box-shadow: 0 1px 14px 7px rgba(0, 0, 0, 0.1);*/
+}
+
+table.valetlinks td {
+  text-align: left;
+  border-top: 1px solid #282828;
+  padding: 5px;
+}
+
+table.valetlinks tr:nth-child(1) td {
+  border-top-style: none;
+}
+
+table.valetlinks td:nth-child(1) {
+  flex: 0 1 40%;
+  min-width: 40%;
+}
+
+table.valetlinks td:nth-child(2) {
+  flex: 0 1 10%;
+  color: #888;
+  text-align: right;
+  padding-right: 10px;
+  min-width: 10%;
+}
+
+table.valetlinks td:nth-child(3) {
+  flex: 0 1 40%;
+  min-width: 40%;
+}
+
+table.valetlinks td:nth-child(4) {
+  flex: 0 1 10%;
+  text-align: right;
+  position: relative;
+  min-width: 10%;
+}
+
+table.valetlinks td:nth-child(4)::before {
+  content: "\f07b";
+  color: #888;
+  font-family: "Font Awesome 5 Pro";
+  margin-right: 5px;
+  cursor: default;
+}
+
+table.valetlinks td span {
+  white-space: nowrap;
+  border-radius: 3px 3px 0 0;
+  display: block;
+  position: absolute;
+  top: -9999px;
+  right: 0;
+  padding: 3px 5px;
+  cursor: default;
+}
+
+table.valetlinks td:hover span {
+  color: #ccc;
+  background-color: rgba(17, 17, 17, 0.95);
+  /*box-shadow: 0 1px 14px 7px rgba(0, 0, 0, 0.1);*/
+  position: absolute;
+  top: -19px;
+  right: 0;
+}
+
+table.valetlinks tr:nth-child(1) td:nth-child(4)::before {
+  content: none;
+}
+
+table.valetlinks tr:nth-child(1) td:nth-child(4) span {
+  position: static;
+}
+
+table.valetlinks tr:nth-child(1) td:nth-child(4):hover span {
+  top: -9999px;
 }
 
 pre#md-table {
-  color: #ccc;
-  font-size: 14px;
-
-  /*opacity: 0;*/
+  opacity: 0;
 }
