--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,12 +1,18 @@
+:root {
+  /* purple: #ba68c8 */
+  --active-color: #ff2d20;
+  --bg-color: #202124;
+}
+
 body {
   color: #fff;
   text-align: center;
-  background: #222;
+  background: var(--bg-color);
   margin: 50px;
 }
 
 a {
-  color: #ba68c8;
+  color: var(--active-color);
   text-decoration: none;
 }
 
@@ -31,7 +37,7 @@ small {
 }
 
 .menu a {
-  color: #ba68c8;
+  color: var(--active-color);
   border-radius: 2px;
   display: inline-block;
   padding: 10px;
@@ -71,10 +77,10 @@ img {
   vertical-align: bottom; /* removes bottom gap */
 }
 
+/*
 input#filterInput {
   color: #fff;
   font-size: 16px;
-  /*border-radius: 8px;*/
   border: 2px solid #35363a;
   background-color: #222;
   box-shadow: inset 0 0 14px 0 rgba(0, 0, 0, 0.25);
@@ -94,6 +100,9 @@ input#filterInput:focus {
 ::-webkit-input-placeholder {
   color: #35363a;
 }
+*/
+
+/* TABLE */
 
 table.valetlinks {
   color: #ccc;
@@ -102,7 +111,7 @@ table.valetlinks {
   display: block;
   margin: 60px auto;
   width: 100%;
-  max-width: 750px;
+  max-width: 800px;
 }
 
 table.valetlinks tbody {
@@ -111,6 +120,7 @@ table.valetlinks tbody {
 }
 
 table.valetlinks tr {
+  border-radius: 4px 0 3px 3px;
   display: flex;
   width: 100%;
 }
@@ -122,45 +132,49 @@ table.valetlinks tr:nth-child(1) {
   text-transform: uppercase;
 }
 
-table.valetlinks tr:hover {
-  border-radius: 3px;
-  background-color: #111;
-  /*box-shadow: 0 1px 14px 7px rgba(0, 0, 0, 0.1);*/
-}
-
 table.valetlinks td {
   text-align: left;
   border-top: 1px solid #282828;
-  padding: 5px;
+  padding: 5px 8px;
 }
 
 table.valetlinks tr:nth-child(1) td {
   border-top-style: none;
+  border-bottom: 1px solid #282828;
 }
 
+/* Site */
 table.valetlinks td:nth-child(1) {
   flex: 0 1 40%;
+  order: 3;
   min-width: 40%;
 }
 
+/* SSL */
 table.valetlinks td:nth-child(2) {
   flex: 0 1 10%;
   color: #888;
   text-align: right;
+  order: 2;
   padding-right: 10px;
   min-width: 10%;
 }
 
+/* URL */
 table.valetlinks td:nth-child(3) {
   flex: 0 1 40%;
+  order: 1;
   min-width: 40%;
 }
 
+/* PATH */
 table.valetlinks td:nth-child(4) {
   flex: 0 1 10%;
   text-align: right;
+  order: 4;
   position: relative;
   min-width: 10%;
+  cursor: default;
 }
 
 table.valetlinks td:nth-child(4)::before {
@@ -173,30 +187,62 @@ table.valetlinks td:nth-child(4)::before {
 
 table.valetlinks td span {
   white-space: nowrap;
-  border-radius: 3px 3px 0 0;
+  border-radius: 3px;
   display: block;
   position: absolute;
   top: -9999px;
-  right: 0;
-  padding: 3px 5px;
+  right: 40px;
+  z-index: 1;
+  padding: 5px 12px;
   cursor: default;
 }
 
-table.valetlinks td:hover span {
-  color: #ccc;
-  background-color: rgba(17, 17, 17, 0.95);
-  /*box-shadow: 0 1px 14px 7px rgba(0, 0, 0, 0.1);*/
+table.valetlinks td span::after {
+  content: "";
+  border-top: 8px solid transparent;
+  border-bottom: 8px solid transparent;
+  border-left: 8px solid var(--active-color);
   position: absolute;
-  top: -19px;
-  right: 0;
+  right: -8px;
+  z-index: 2;
+  width: 0;
+  height: 0;
 }
 
-table.valetlinks tr:nth-child(1) td:nth-child(4)::before {
+table.valetlinks td:hover span {
+  color: #eee;
+  background-color: var(--active-color);
+  box-shadow: 0 1px 7px 3px rgba(0, 0, 0, 0.15);
+  top: -1px;
+}
+
+table.valetlinks tr.show-path td:nth-child(4)::before {
+  color: #eee;
+}
+
+table.valetlinks tr.show-path:nth-child(1) {
+  background-color: transparent;
+  box-shadow: none;
+}
+
+table.valetlinks tr.show-path:nth-child(1) td {
+  color: #999;
+}
+
+table.valetlinks tr.show-path:nth-child(1) td:hover span {
+  color: #999;
+  background-color: transparent;
+  box-shadow: none;
+}
+
+table.valetlinks tr:nth-child(1) td:nth-child(4)::before,
+table.valetlinks tr:nth-child(1) td span::after {
   content: none;
 }
 
 table.valetlinks tr:nth-child(1) td:nth-child(4) span {
   position: static;
+  padding-right: 3px;
 }
 
 table.valetlinks tr:nth-child(1) td:nth-child(4):hover span {
