--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -10,7 +10,7 @@
   background-color: #fff;
   box-shadow: 0 1px 14px 5px rgba(0, 0, 0, 0.05);
   margin-bottom: 1.5rem;
-  padding: 1rem;
+  padding: 1.5rem 1rem;
   transition: all 1s ease;
   @if $themeMode == "dark" {
     background-color: #222;
