Split up Scss files.

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,2 +1,7 @@
+@import "variables";
 @import "mixins";
 @import "main";
+@import "sidebar";
+@import "sidebar-menu";
+@import "sidebar-settings";
+@import "table";
