--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -11,9 +11,8 @@
   box-shadow: 0 1px 14px 5px rgba(0, 0, 0, 0.05);
   margin-bottom: 1.5rem;
   padding: 1.5rem 1rem;
-  transition: all 1s ease;
   @if $themeMode == "dark" {
     background-color: #222;
-    box-shadow: 0 1px 14px 5px rgba(0, 0, 0, 0.15);
+    box-shadow: inset 0 0 0 1px rgba(#fff, 0.07), 0 1px 14px 5px rgba(0, 0, 0, 0.15);
   }
 }
